<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">


    <TextView
        android:id="@+id/textViewSign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:fontFamily="@font/quicksand_medium"
        android:text="@string/createacc"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/inputEmailSign"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="56dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_email_icon"
        android:drawablePadding="8dp"
        android:ems="10"
        android:fontFamily="@font/quicksand_medium"
        android:hint="@string/email_address"
        android:elevation="5dp"
        android:inputType="textEmailAddress"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSign" />

    <EditText
        android:autofillHints="username"
        android:id="@+id/inputUsername"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="56dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_username"
        android:drawablePadding="8dp"
        android:ems="10"
        android:fontFamily="@font/quicksand_medium"
        android:hint="@string/username"
        android:elevation="5dp"
        android:inputType="textEmailAddress"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputEmailSign" />

    <EditText
        android:id="@+id/inputPasswordSign"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="56dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_password_icon"
        android:drawablePadding="8dp"
        android:ems="10"
        android:fontFamily="@font/quicksand_medium"
        android:hint="@string/password"
        android:elevation="5dp"
        android:inputType="textPassword"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputUsername"

        />

    <EditText
        android:id="@+id/inputConfirmPassword"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="56dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_password_icon"
        android:drawablePadding="8dp"
        android:ems="10"
        android:fontFamily="@font/quicksand_medium"
        android:hint="@string/confirm_password"
        android:elevation="5dp"
        android:inputType="textPassword"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputPasswordSign"

        />

    <ImageView
        android:id="@+id/backArrow"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:src="@drawable/baseline_arrow_back_24"
        app:layout_constraintEnd_toStartOf="@+id/textViewSign"
        app:layout_constraintHorizontal_bias="0.377"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewSign" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signUpBtn"
        android:layout_width="132.24dp"
        android:layout_height="56dp"
        android:layout_gravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/custom_button"
        android:drawableRight="@drawable/ic_baseline_arrow_forward"
        android:drawablePadding="4dp"
        android:drawableTint="@color/white"
        android:fontFamily="@font/quicksand_medium"
        android:gravity="center"
        android:letterSpacing="0.1"
        android:paddingLeft="12dp"
        android:paddingRight="18dp"
        android:singleLine="true"
        android:text="@string/register_account"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputConfirmPassword" />


</androidx.constraintlayout.widget.ConstraintLayout>